// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcUserInfo should not show text when collapsed 1`] = `
<div
  class="ec-user-info"
>
  <img
    alt="Ebury Demo 2 gravatar"
    class="ec-user-info__avatar"
    src="https://www.gravatar.com/avatar/e07fd6efc70ccc63bbc3a3e27b81b29e?d=mm&s=200"
  />
   
  <!---->
</div>
`;

exports[`EcUserInfo should render as expected 1`] = `
<div
  class="ec-user-info"
>
  <img
    alt="Ebury Demo 2 gravatar"
    class="ec-user-info__avatar"
    src="https://www.gravatar.com/avatar/e07fd6efc70ccc63bbc3a3e27b81b29e?d=mm&s=200"
  />
   
  <div>
    <a
      class="ec-user-info__client-name"
      href="/profile"
    >
      Ebury Demo 2
    </a>
     
  </div>
</div>
`;

exports[`EcUserInfo should show text when not collapsed 1`] = `
<div
  class="ec-user-info"
>
  <img
    alt="Ebury Demo 2 gravatar"
    class="ec-user-info__avatar"
    src="https://www.gravatar.com/avatar/e07fd6efc70ccc63bbc3a3e27b81b29e?d=mm&s=200"
  />
   
  <div>
    <a
      class="ec-user-info__client-name"
      href="/profile"
    >
      Ebury Demo 2
    </a>
     
  </div>
</div>
`;
